--- a/css/atid.css
+++ b/css/atid.css
@@ -17,6 +17,7 @@ body {
 }
 .subseccion {
 	min-height:450px;
+	padding: 35px;
 }
 .navbar {
 	min-height:80px;
@@ -25,10 +26,11 @@ body {
 	border-radius:0px;
 	font-family: 'Roboto', sans-serif;
 	font-size:1.1em;
+	font-weight:400;
 }
 .navbar-default .navbar-nav > li > a {
 	color:#3A3A3A;
-	padding: 30px 15px;
+	padding: 20px 15px;
 }
 .navbar-brand {
 	height:80px;
@@ -42,6 +44,36 @@ body {
     border-color: #e7e7e7;
 	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
 }
+
+
+
+.navbar-default .navbar-nav > li > a:hover,
+.navbar-default .navbar-nav > li > a:focus {
+  color: #009ddc
+}
+.navbar-default .navbar-nav > li > a:after {
+  display: block;
+  position: absolute;
+  bottom: -10px;
+  left:0;
+  width: 0;
+  height: 1px;
+  background-color: #009ddc;
+  content: "";
+  transition:all 300ms ease-in-out;;
+      -webkit-animation-direction: alternate; /* Chrome, Safari, Opera */
+    animation-direction: alternate;
+}
+.navbar-default .navbar-nav > li > a:hover {
+  color: #009ddc;
+}
+.navbar-default .navbar-nav > li > a:hover:after {
+  width: 100%;
+}
+
+
+
+
 .carousel-fade .carousel-control {
     background-image: none;
 }
@@ -75,16 +107,28 @@ h1 {
 	padding-top:70px;
 }
 .actividades {
-	background-image:url(http://placehold.it/1920x1080/a39184/fff);
-	background:url(http://placehold.it/1920x1080/a39184/fff);
+	background-image:url(http://placehold.it/1920x1080/72757d/fff);
+	background:url(http://placehold.it/1920x1080/72757d/fff);
 	background-repeat:no-repeat;
 	background-size:cover;
 	background-position:center center;
-	color:#FFFFFF;
 	padding: 0 0 70px 0;
 }
-.actividades .seccion h1 {
+.actividades h1 {
+	color:#FFFFFF;
+}
+.actividades .subseccion h1 {
 	color:#009ddc;
+}
+.actividades .subseccion h1 {
+	text-align:left;
+	padding:0px;
+}
+.borde_evento {
+    border-top: 1px solid #fff;
+    width: 40px;
+    margin-bottom: 15px;
+	margin-top: 35px;
 }
 .preguntas {
 	font-size:1.1em;
@@ -116,14 +160,96 @@ h1 {
 
 .fondo_negro {
 	background-color: rgba(0, 0, 0, 0.64);
+	color:#FFFFFF;
+}
+.fondo_blanco64 {
+	background-color: rgba(255, 255, 255, 0.64);
 }
 .fondo_blanco {
-	background-color: rgba(255, 255, 255, 0.64);
+	background-color: #FFFFFF;
+	color:#505050;
 }
 .fondo_celeste {
 	background-color: #009ddc;
-	color:#fff;
+	color:#FFFFFF;
 }
 footer {
 	padding: 35px 0;
+}
+/*  Input Reset */
+input[type="text"], input[type="email"], input[type="tel"], textarea{
+	background-color: transparent !important;
+	border: solid 1px #FFFFFF;
+	margin:5px 0;
+	color:#2f2f2f;
+	font-family: "Montserrat", sans-serif;
+	padding:5px 0 5px 15px;;
+}
+input[type="submit"] {
+	display: block;
+    padding: 12px 35px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    background-color: #000;
+    color: #FFFFFF;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    font-weight: 400;
+    font-size: 13px;
+    text-align: center;
+    float: right;
+}
+input[type=submit]:hover, input[type=submit]:focus {
+    background-color: #FFFFFF;
+    color: #C72D45;
+}
+::-webkit-input-placeholder { /* WebKit, Blink, Edge */
+    color:#2f2f2f;
+}
+:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+   color:#2f2f2f;
+   opacity:  1;
+}
+::-moz-placeholder { /* Mozilla Firefox 19+ */
+   color:#2f2f2f;
+   opacity:  1;
+}
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+   color:#2f2f2f;
+}
+
+/* JQuery UI Reset */
+.ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active {
+    border: none !important;
+    background: transparent !important;
+    font-weight: normal !important;
+    color: #505050 !important;
+}
+.ui-state-active a, .ui-state-active a:link, .ui-state-active a:visited {
+    color: #505050 !important;
+    text-decoration: none;
+}
+.ui-state-active .ui-icon,
+.ui-state-hover .ui-icon, .ui-state-focus .ui-icon,
+.ui-state-default .ui-icon {
+        background-image: url("../JQueryAssets/images/ui-icons_228ef1_256x240.png") !important;
+}
+.ui-widget-content {
+    border: none !important;
+    background: #fff;
+    color: #505050 !important;
+}
+.ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus {
+    border: none !important;
+    background: transparent !important;
+    font-weight: normal;
+    color: #505050 !important;
+}
+.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default {
+    border: none !important;
+    background: transparent !important;
+    font-weight: normal;
+    color: #505050 !important;
 }
